WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247021
REGRESSION (
255635@main
): No video in Netflix hover previews
https://bugs.webkit.org/show_bug.cgi?id=247021
Summary
REGRESSION (255635@main): No video in Netflix hover previews
Jer Noble
Reported
2022-10-25 12:56:28 PDT
(REGRESSION:
255635@main
) No video in Netflix hover previews
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2022-10-25 12:56:34 PDT
<
rdar://problem/101520126
>
Jer Noble
Comment 2
2022-10-25 13:00:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5770
EWS
Comment 3
2022-10-27 09:04:11 PDT
Committed
256069@main
(05fcfed179c8): <
https://commits.webkit.org/256069@main
> Reviewed commits have been landed. Closing PR #5770 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug